# mynum

./: .gitignore  CMakeLists.txt  README.md
doc/: bignum.md
mynum/: bignum.h  constant_euler_numbers.cc  integer.h
mynum/bignum/: bignum_to_string.cc  nan.cc  sub.cc  zero.cc
mynum/float/: arccos.cc  arcsinh.cc  arctanh.cc  ceil.cc  cos.cc  csc.cc  equ.cc  exp.cc  floor.cc  gamma.cc  ge.cc  gt.cc  is_infinite.cc  is_zero.cc  log10.cc  log2.cc  mod.cc  mul.cc  pow.cc  sinh.cc
mynum/integer/: bernoulli_numbers.cc  ceil.cc  copy.cc  floor.cc  gcd.cc  is_nan.cc  is_odd.cc  lcm.cc  le.cc
mynum/math/: abs.cc  atan.cc  cbrt.cc  ceil.cc  copysign.cc  expm1.cc  fmod.cc  fpclassify.cc  isfinite.cc  isnan.cc  isunordered.cc  llround.cc  nearbyint.cc  sinh.cc  sqrt.cc  tan.cc
mynum/research/: bernoulli_numbers_gmp.cc
mynum/test/: test_bignum.cc  test_float_pow.cc  test_integer.cc  test_trigonometric.py
mynum/tools/: generate_euler_numbers.cc
src/: .gitignore  bignum.cc  bignum.h  bignum_add.cc  bignum_sub.cc  common.cc  common.h  compile.h  complex.h  constant.cc  constant.h  constant_bernoulli_numbers.cc  constant_euler_numbers.cc  convert.cc  convert.h  debug.h  exception.h  float.h  integer.cc  integer.h  integer_compare.cc  integer_discrete.cc  integer_operator.cc  math.h  math.hpp  mp.h  mynum.cc  mynum.h  number.h  numeric.cc  numeric.h  numeric___.h  numeric_operator.cc  real.h  ref.cc  wrapper.cc  wrapper.h
src/bignum/: add.cc  add2.cc  bignum.cc  bignum_add.cc  bignum_div.cc  bignum_mul.cc  bignum_to_string.cc  cmp.cc  div.cc  div2.cc  is_nan.cc  is_zero.cc  mod.cc  mul.cc  shrink_zero.cc  string_to_bignum.cc  sub2.cc
src/complex/: abs.cc  add.cc  arccosh.cc  arccoth.cc  arccsc.cc  arcsin.cc  arctanh.cc  cmp.cc  complex.cc  cosh.cc  cot.cc  coth.cc  csc.cc  csch.cc  div.cc  erf.cc  exp.cc  floor.cc  gamma.cc  gcd.cc  lcm.cc  length.cc  ln.cc  log.cc  log10.cc  log2.cc  mod.cc  mul.cc  pow.cc  round.cc  sec.cc  sgn.cc  sinh.cc  sqrt.cc  sub.cc  triangle.cc
src/core/: common.cc  common.h  constant.cc  constant.h  exception.h  numeric.cc  numeric.h
src/core/test/: test_bernoulli_numbers.cc  test_euler_numbers.cc  test_numeric.cc  test_trigonometric.py
src/float/: __cmp.cc  __infinity.h  __xxx_infinite.cc  abs.cc  add.cc  arccos.cc  arccosh.cc  arccot.cc  arccoth.cc  arccsc.cc  arccsch.cc  arcsec.cc  arcsech.cc  arcsin.cc  arcsinh.cc  arctan.cc  arctanh.cc  ceil.cc  constant.cc  constant_bernoulli_numbers.cc  constant_euler_numbers.cc  copy.cc  cos.cc  cosh.cc  cot.cc  coth.cc  csc.cc  csch.cc  div.cc  div2.cc  equ.cc  erf.cc  erfc.cc  exp.cc  factorial.cc  float.cc  floor.cc  fraction.cc  gamma.cc  integer.cc  (+28 more)
src/integer/: __infinity.h  __xxx_infinite.cc  abs.cc  add.cc  and_bits.cc  bernoulli_numbers.cc  cmp_infinite.cc  div.cc  equ.cc  euler_numbers.cc  extended_euclidean.cc  factorial.cc  gcd.cc  ge.cc  gt.cc  integer.cc  is_even.cc  is_infinite.cc  is_nan.cc  is_none.cc  is_one.cc  is_subnormal.cc  is_zero.cc  lcm.cc  lshift_bits.cc  lt.cc  mod.cc  mul.cc  not_bits.cc  operator.cc  or_bits.cc  pow.cc  quo.cc  rshift_bits.cc  same_digits.cc  sgn.cc  sub.cc  xor_bits.cc
src/math/: FIXLIST.txt  abs.cc  abs.hpp  acos.cc  acos.hpp  acosh.cc  acosh.hpp  asin.cc  asin.hpp  asinh.cc  asinh.hpp  atan.cc  atan.hpp  atan2.cc  atan2.hpp  atanh.cc  atanh.hpp  cbrt.cc  cbrt.hpp  ceil.cc  ceil.hpp  copysign.cc  copysign.hpp  cos.cc  cos.hpp  cosh.cc  cosh.hpp  erf.cc  erf.hpp  erfc.cc  erfc.hpp  exp.cc  exp.hpp  exp2.cc  exp2.hpp  expm1.cc  expm1.hpp  fabs.cc  fabs.hpp  fdim.cc  (+97 more)
src/number/: __gcd.cc  abs.cc  add.cc  arccos.cc  arccot.cc  arccsch.cc  arcsec.cc  arcsech.cc  arcsinh.cc  arctan.cc  ceil.cc  cmp.cc  complex.cc  complex.h  convert.cc  convert.h  cos.cc  div.cc  erfc.cc  exp.cc  extended_euclidean.cc  fraction.cc  fraction.h  gcd.cc  integer.cc  integer.h  is_one.cc  is_zero.cc  lcm.cc  ln.cc  log10.cc  log2.cc  number.cc  number.h  real.cc  real.h  reduction.cc  relatively_prime.cc  sech.cc  sin.cc  (+3 more)
src/number/test/: test_convert.cc  test_number.cc
src/real/: abs.cc  add.cc  arccos.cc  arccosh.cc  arccot.cc  arccoth.cc  arccsc.cc  arccsch.cc  arcsec.cc  arcsech.cc  arcsin.cc  arcsinh.cc  arctan.cc  arctanh.cc  ceil.cc  cmp.cc  cos.cc  cosh.cc  cot.cc  coth.cc  csc.cc  csch.cc  div.cc  erf.cc  erfc.cc  exp.cc  extended_euclidean.cc  floor.cc  fraction.cc  gamma.cc  gcd.cc  is_one.cc  is_zero.cc  lcm.cc  ln.cc  log.cc  log10.cc  log2.cc  mod.cc  mul.cc  (+14 more)
src/research/: eval_cf_lentz.cc  eval_cf_steed.cc
src/test/: test_bernoulli_numbers.cc  test_bignum.cc  test_euler_numbers.cc  test_float.cc  test_float_erf_gamma.cc  test_float_log.cc  test_integer.cc  test_math.cc  test_numeric.cc  test_size.cc  test_sqrt.py  test_trigonometric.py
src/tools/: generate_bernoulli_numbers.cc
test/: CMakeLists.txt  test_error.cc  test_euler_numbers.cc  test_exp.cc  test_extended_euclidean.cc  test_factorial.cc  test_float.cc  test_fraction.cc  test_gcd.cc  test_hyperfunc.cc  test_integer.cc  test_log.cc  test_number.cc  test_pow.cc  test_sqrt.cc  test_trigfunc.cc
test/misc/: test_cmath.cc
test/py/: test_exp.py  test_sin.py
tools/: CMakeLists.txt  generate_bernoulli_numbers.cc  generate_euler_numbers.cc
